--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/parent">
+    android:id="@+id/parent"
+    android:padding="10dp">
 
-    <TextView
-        android:id="@+id/textView"
+    <EditText
+        android:id="@+id/editTextIpAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:visibility="gone"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:autoLink="web"
-        />
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        android:hint="Phone ip address" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonStartService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="Exit" />
+        android:layout_marginTop="10dp"
+        android:text="Start service" />
 
+    <Button
+        android:id="@+id/buttonStopService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Stop service" />
 
 </LinearLayout>
 
