--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parent"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/parent"
     android:padding="10dp">
+
+    <Spinner
+        android:id="@+id/spinnerPhoneSSID"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:hint="Phone Wifi SSID" />
 
     <EditText
         android:id="@+id/editTextIpAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Override phone ip address"
         android:inputType="textPersonName"
-        android:text=""
-        android:hint="Phone ip address" />
+        android:text="" />
 
     <Button
         android:id="@+id/buttonStartService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Start service" />
 
     <Button
         android:id="@+id/buttonStopService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Stop service" />
 
 </LinearLayout>
